kubernates_Deployments/FrontService.yml
apiVersion: v1
kind: Service
metadata:
  name: front-clusterip-service

spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
  
  selector:
    web: frontend
