kubernates_Deployments/backService.yml
apiVersion: v1
kind: Service
metadata:
  name: back-clusterip-service
  namespace: ingress-nginx


spec:
  type: ClusterIP
  ports:
  - port: 4000
    targetPort: 3000

  selector:
    web: backend
