kubernates_Deployments/dbLoadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-loadbalancer-service
  labels:
    web: mysql

spec:
  type: LoadBalancer
  ports:
    - port: 80         # Port that will be exposed by the LoadBalancer
      targetPort: 3306 # Port on the pod that the traffic will be forwarded to
  selector:
    web: mysql        # Label selector to identify the pods
