kubernates_Deployments/dbService.yml
apiVersion: v1
kind: Service
metadata:
  name: db-clusterip-service


spec:
  type: ClusterIP
  ports:
  - port: 3306 
    targetPort: 3306 

  selector:
    web: db
