kubernates_Deployments/frontendLoadBalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: my-loadbalancer-service
  labels:
    web: frontend

  namespace: ingress-nginx
spec:
  type: LoadBalancer
  ports:
    - port: 80         # Port that will be exposed by the LoadBalancer
      targetPort: 3000 # Port on the pod that the traffic will be forwarded to
  selector:
    web: frontend        # Label selector to identify the pods
