kubernates_Deployments/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: ingress-nginx  # Use the correct namespace if different
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: saay.depi.com  # Replace with your desired hostname
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-nodeport-service  # Change to your NodePort service name
                port:
                  number: 3000  # This should match the NodePort service port
